DB changed to Supabase

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT=3000
 
-THE_MONGODB_URL=mongodb://localhost:27017/go-auth
+DATABASE_URL=postgresql://postgres:GO-AUTH-ADMIN@db.soowayrcaeanqqpitimw.supabase.co:5432/postgres
 JWT_SECRET=this_is_a_super_secret_jwt_key_2025!
